<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".view.ui.connect.ConnectActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/connectField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/rounded_grey_rectangle"
        android:elevation="16dp"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvConnectTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/tv_address_desc"
            android:text="@string/connect_to"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_white_rectangle"
            android:hint="@string/address"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="#757575"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/tvConnectTo"
            app:layout_constraintTop_toBottomOf="@+id/tvConnectTo" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/tv_username_desc"
            android:text="@string/username"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/etAddress"
            app:layout_constraintTop_toBottomOf="@id/etAddress" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_white_rectangle"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="#757575"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/tvUsername"
            app:layout_constraintTop_toBottomOf="@+id/tvUsername" />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/tv_password_desc"
            android:text="@string/password"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/etUsername"
            app:layout_constraintTop_toBottomOf="@id/etUsername" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_white_rectangle"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="#757575"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/tvPassword"
            app:layout_constraintTop_toBottomOf="@+id/tvPassword" />

        <Button
            android:id="@+id/btConnect"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/white"
            app:cornerRadius="20sp"
            android:contentDescription="@string/bt_connect_desc"
            android:elevation="16dp"
            android:padding="12dp"
            android:text="@string/connect_button"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:enabled="false"
            app:layout_constraintEnd_toEndOf="@id/etPassword"
            app:layout_constraintStart_toStartOf="@id/etPassword"
            app:layout_constraintTop_toBottomOf="@id/etPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>