<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="40dp"
    android:background="@drawable/rounded_white_rectangle"
    android:elevation="12dp"
    app:cardCornerRadius="24dp"
    android:id="@+id/SaveCard">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cvLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="32dp">

        <TextView
            android:id="@+id/tvLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_title_dialog"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLogoutDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/save_desc_dialog"
            android:textAlignment="center"
            android:textColor="#757575"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="@id/tvLogout"
            app:layout_constraintStart_toStartOf="@id/tvLogout"
            app:layout_constraintTop_toBottomOf="@id/tvLogout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btChoose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLogoutDesc">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btCancelSave"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/bt_delete_cancel"
                android:text="@string/cancel"
                android:textAlignment="center"
                android:textColor="#4E5BD8"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.475"
                app:strokeColor="#4E5BD8" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btYesSave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#4E5BD8"
                style="@style/Widget.Material3.Button"
                android:contentDescription="@string/bt_delete_yes"
                android:text="@string/save"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.475" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>