<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="40dp"
    android:background="@drawable/rounded_white_rectangle"
    android:elevation="12dp"
    app:cardCornerRadius="24dp"
    android:id="@+id/AddCard">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cvLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="32dp">

        <TextView
            android:id="@+id/tvAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_title_dialog"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAddDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/save_desc_dialog"
            android:textAlignment="center"
            android:textColor="#757575"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="@id/tvAdd"
            app:layout_constraintStart_toStartOf="@id/tvAdd"
            app:layout_constraintTop_toBottomOf="@id/tvAdd" />

        <EditText
            android:id="@+id/etNetworkUpload"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_white_stroke_rectangle"
            android:hint="@string/client_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="#757575"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/btChoose"
            app:layout_constraintTop_toBottomOf="@id/tvAddDesc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btChoose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etNetworkUpload">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btCancelAdd"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/bt_delete_cancel"
                android:text="@string/cancel"
                android:textAlignment="center"
                android:textColor="#222222"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.475"
                app:strokeColor="#222222" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btYesAdd"
                style="@style/Widget.Material3.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#222222"
                android:contentDescription="@string/bt_delete_yes"
                android:text="@string/add"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.475" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>