<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.network.NetworkActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBarNetwork"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btBack"
            style="?attr/materialIconButtonFilledStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:backgroundTint="#F5F5F5"
            android:contentDescription="@string/bt_back_desc"
            app:cornerRadius="12dp"
            app:icon="@drawable/back_icon"
            app:iconSize="0dp"
            app:iconTint="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/tvTopbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvTopbar" />

        <TextView
            android:id="@+id/tvTopbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="32dp"
            android:text="@string/network"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/BTS"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#222222"
        android:elevation="8dp"
        android:paddingVertical="16dp"
        android:text="@string/BTS"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@id/topBarNetwork"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/Radio"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#222222"
        android:elevation="8dp"
        android:paddingVertical="16dp"
        android:text="@string/radio"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@id/BTS"
        app:layout_constraintStart_toStartOf="@id/BTS"
        app:layout_constraintEnd_toEndOf="@id/BTS"/>

    <Button
        android:id="@+id/Mode"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#222222"
        android:elevation="8dp"
        android:paddingVertical="16dp"
        android:text="@string/mode"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@id/Radio"
        app:layout_constraintStart_toStartOf="@id/Radio"
        app:layout_constraintEnd_toEndOf="@id/Radio"/>

    <Button
        android:id="@+id/ChannelWidth"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#222222"
        android:elevation="8dp"
        android:paddingVertical="16dp"
        android:text="@string/channel_width"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@id/Mode"
        app:layout_constraintStart_toStartOf="@id/Mode"
        app:layout_constraintEnd_toEndOf="@id/Mode"/>

    <Button
        android:id="@+id/PresharedKey"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#222222"
        android:elevation="8dp"
        android:paddingVertical="16dp"
        android:text="@string/preshared_key"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@id/ChannelWidth"
        app:layout_constraintStart_toStartOf="@id/ChannelWidth"
        app:layout_constraintEnd_toEndOf="@id/ChannelWidth"/>
</androidx.constraintlayout.widget.ConstraintLayout>